--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,3 +215,12 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+RESTURL  = http://www.geoblaster.info:8080/geoserver
+RESTUSER = admin
+RESTPW   = geoserver
+
+db.driver=org.postgresql.Driver
+
+db.url=jdbc:postgresql://www.geoblaster.info:5432/automated_shapefile_uploads
+db.user=dunawayjenckes
+db.pass=MacsEdgar2155
