--- a/conf/application.conf
+++ b/conf/application.conf
@@ -221,6 +221,6 @@ RESTPW   = geoserver
 
 db.driver=org.postgresql.Driver
 
-db.url=jdbc:postgresql://www.geoblaster.info:5432/automated_shapefile_uploads
+db.url=jdbc:postgresql://www.geoblaster.info:5432/geology
 db.user=dunawayjenckes
 db.pass=MacsEdgar2155
